Added additional dancers, Completed most of bare min requirements w/ exception of dancer interaction and mouse over functionality

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,21 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/ghostDancer.js"></script>
+    <script src="src/leftRightDancer.js"></script>
+    <script src="src/colorDancer.js"></script>
+    <script src="src/carltonDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeGhostDancer">add a ghost dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeLeftRightDancer">add a left right dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a color dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCarltonDancer">add a calrton</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">line up dancers</a>
+      </div>
     <script src="src/init.js"></script>
   </body>
 </html>
