Added players to game that the users can control and fight each other by firing bulletes at each other.

--- a/inheritanceGame/tomSander'sCounterStrike.html
+++ b/inheritanceGame/tomSander'sCounterStrike.html
@@ -6,12 +6,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="javascript/character.js"></script>
     <script src="javascript/kangarooCharacter.js"></script>
+    <script src="javascript/anxiousSamusCharacter.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">Counter---Strike</span>
       <a href="#" class="changeMapButton">Change Map</a>
       <a href="#" class="changeCharacter" data-character-maker-function-name="makeKangarooCharacter">Kangaroo</a>
+      <a href="#" class="changeCharacter" data-character-maker-function-name="makeAnxiousSamusCharacter">Anxious Samus</a>
       </div>
     <script src="javascript/init.js"></script>
   </body>
